Register User response format changed to JSend spec
